chat header is styled

--- a/src/components/ChatFeature/Chat/Chat.scss
+++ b/src/components/ChatFeature/Chat/Chat.scss
@@ -3,63 +3,41 @@
     height: 100vh;
     
     .chatHeader{
-    // display: flex;
-    // align-items: center;
-    // justify-content: space-between;
-    // padding: 10px;
-    // border-bottom: 1px solid #ccc;
-
-    display: flex;
-        flex-direction: column;
+        display: flex;
+        justify-content: space-between;
         align-items: center;
-        justify-content: center;
-        height: 20vh;
-        
-    
-    .backIcon{
-        cursor: pointer;
-    }
-    .userInfo {
-        // display: flex;
-        // flex-direction: column;
-        // align-items: center;
-        // justify-content: center;
-        // height: 20vh;
-        text-align: center;
-        
-        .userDetails{
+        padding: 10px;
+        height: 160px;
+
+        .colOne{
+            flex-basis: 40px;
+            margin-bottom: 50px;
+        }
+
+        .colTwo{
             display: flex;
             flex-direction: column;
+            align-items: center;
+            flex-basis: 382px;
             font-family: "Gilroy-ExtraBold";
-        }
-       
+            margin-right: 40px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid;
+            
 
-        img{
-            height: 64px;
-            width: 64px;
-        }
-
-        .userDetails{
-            text-align: center;
-            font-family: "Gilroy-Extra-Bold";
-        }
-
-        .user-details h2 {
-            margin: 0;
-            font-size: 18px; 
-         /* Adjust font size of the user name */
-        }
-        
-        .user-details p {
-            margin: 0;
-            color: #777; /* Adjust color of user occupation */
-            font-size: 14px;  /* Adjust font size of user occupation */
+            .userTwoImg{
+                height: 64px;
+                width: 64px;
+                object-fit: cover;
+                margin-bottom: 10px;
+            }
+            .userName{
+                font-size: 25px;
+            }
+            .userOccupation{
+                font-size: 16px;
+            }
         }
     }
-    
-
-    }
-
-   
 
 }
