--- a/src/components/ChatFeature/Search/Search.scss
+++ b/src/components/ChatFeature/Search/Search.scss
@@ -1,6 +1,6 @@
 
 .search{
-    margin-top: 10px;
+    // margin-top: 10px;
 
     .searchForm {
       position: relative;
@@ -20,13 +20,13 @@
         font-size: 14px;
       }
       .searchInput {
-        padding-left: 40px; /* Adjust the padding to accommodate the icon */
-        width: 300px; /* Set the width as needed */
+        padding-left: 40px; 
+        width: 300px; 
         }
       
       .searchIcon {
         position: absolute;
-        left: 50px; /* Adjust the position of the icon */
+        left: 60px; /* Adjust the position of the icon */
         top: 38%;
         transform: translateY(-50%);
         color: #0954b0;
