--- a/src/routes/WelcomePage/WelcomeNavBar.scss
+++ b/src/routes/WelcomePage/WelcomeNavBar.scss
@@ -1,116 +1,117 @@
-// @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Protest+Guerrilla&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Protest+Guerrilla&display=swap');
 
-// * {
-//     padding: 0;
-//     margin: 0;
-//     box-sizing: border-box;
-//     font-family: "Protest Guerrilla", sans-serif;
-// }
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Protest Guerrilla", sans-serif;
+}
 
-// :root {
-//     --mainColor: #FFF;
-//     --mainColorLight: #5767aa;
-//     --secondaryColor: #DB2B39;
-//     --textColor: #000;
-// }
+:root {
+    --mainColor: #FFF;
+    --mainColorLight: #5767aa;
+    --secondaryColor: #DB2B39;
+    --textColor: #000;
+}
 
-// header {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     padding: 1rem;
-//     background-color: var(--mainColor);
-//     color: var(--textColor);
-// }
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    background-color: var(--mainColor);
+    color: var(--textColor);
+}
 
-// nav a {
-//     margin: 0 2rem;
-//     color: var(--textColor);
-//     text-decoration: none;
-// }
+nav a {
+    margin: 0 2rem;
+    color: var(--textColor);
+    text-decoration: none;
+}
 
-// nav a:hover {
-//     color: var(--secondaryColor);
-// }
+nav a:hover {
+    color: var(--secondaryColor);
+}
 
-// header .nav-btn {
-//     padding: 5px;
-//     cursor: pointer;
-//     background: transparent;
-//     border: none;
-//     outline: none;
-//     color: var(--textColor);
-//     visibility: hidden;
-//     opacity: 0;
-//     font-size: 1.8rem;
-// }
+header .nav-btn {
+    padding: 5px;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: var(--textColor);
+    visibility: hidden;
+    opacity: 0;
+    font-size: 1.8rem;
+}
 
-// img {
-//     width: 2rem;
-//     align-self: center;
-// }
+.logo {
+    display: flex;
+    flex-direction: column;
+}
 
-// div {
-//     display: flex;
-//     flex-direction: column;
-// }
 
-// h2 {
-//     font-size: 1rem;
-// }
+.logo img {
+    width: 2rem;
+    align-self: center;
+}
 
-// .sign {
-//     display: flex;
-//     flex-direction: column;
-//     gap: 1rem;
-// }
+.logo h2 {
+    font-size: 1rem;
+}
 
-// .sign-btn {
-//     border-width: 3px;
-//     border-color: #000;
-//     background-color: #FFF;
-//     font-weight: 800;
-//     border: 2px solid black;
-//     padding: 0.2rem;
-// }
+.sign {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
-// @media only screen and (max-width: 1024px) {
-//     header .nav-btn {
-//         visibility: visible;
-//         opacity: 1;
-//     }
+.sign-btn {
+    border-width: 3px;
+    border-color: #000;
+    background-color: #FFF;
+    font-weight: 800;
+    border: 2px solid black;
+    padding: 0.2rem;
+}
 
-//     header nav {
-//         position: fixed;
-//         top: 0;
-//         left: 0;
-//         width: 100%;
-//         display: flex;
-//         flex-direction: column;
-//         align-items: center;
-//         justify-content: center;
-//         gap: 1.5rem;
-//         background-color: var(--mainColor);
-//         transition: 1s;
-//         transform: translateY(-100vh);
-//     }
+@media only screen and (max-width: 1024px) {
+    header .nav-btn {
+        visibility: visible;
+        opacity: 1;
+    }
 
-//     header .responsive_nav {
-//         transform: none;
-//     }
+    header nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1.5rem;
+        background-color: var(--mainColor);
+        transition: 1s;
+        transform: translateY(-100vh);
+    }
 
-//     nav .nav-close-btn {
-//         position: absolute;
-//         top: 2rem;
-//         right: 2rem;
-//     }
+    header .responsive_nav {
+        transform: none;
+    }
 
-//     nav a {
-//         font-size: 1.5rem;
-//     }
+    nav .nav-close-btn {
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+    }
 
-//     .sign {
-//         display: none;
-//     }
+    nav a {
+        font-size: 1.5rem;
+    }
 
-// }
+    .sign {
+        display: none;
+    }
+}
