--- a/src/routes/WelcomePage/WelcomeNavBar.scss
+++ b/src/routes/WelcomePage/WelcomeNavBar.scss
@@ -14,7 +14,7 @@
     --textColor: #000;
 }
 
-header {
+.welcome-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -33,7 +33,7 @@ nav a:hover {
     color: var(--secondaryColor);
 }
 
-header .nav-btn {
+.welcome-header .nav-btn {
     padding: 5px;
     cursor: pointer;
     background: transparent;
@@ -76,12 +76,12 @@ header .nav-btn {
 }
 
 @media only screen and (max-width: 769px) {
-    header .nav-btn {
+    .welcome-header .nav-btn {
         visibility: visible;
         opacity: 1;
     }
 
-    header nav {
+    .welcome-header nav {
         position: fixed;
         top: 0;
         left: 0;
@@ -97,7 +97,7 @@ header .nav-btn {
         transform: translateY(-100vh);
     }
 
-    header .responsive_nav {
+    .welcome-header .responsive_nav {
         transform: none;
     }
 
