add margin-x to move home sections lower

--- a/src/routes/HomePage/HomePage.scss
+++ b/src/routes/HomePage/HomePage.scss
@@ -60,7 +60,7 @@
   padding: 1rem;
   width: 90%;
   height: 11rem;
-  margin: 1.25rem;
+  margin: 5.25rem 1.25rem;
   @include desktop {
     margin: 3rem;
     padding: 2rem;
