--- a/src/components/ChatFeature/Message/Message.scss
+++ b/src/components/ChatFeature/Message/Message.scss
@@ -1,78 +1,63 @@
-
-
-    .message{
-        display: flex;
-        gap: 25px;
-        margin-bottom: 20px ;
-        position: relative;
-    
-        .messageInfo{
-            display: flex;
-            flex-direction: column;
-            color: gray;
-            font-weight: 300;
-
-            img{
-                width: 35px;
-                height: 35px;
-                border-radius: 50%;
-                object-fit: cover;
-            }
-        }
-
-        .messageContent{
-            min-width: 80%;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            position: relative;
-
-            p{
-                background-color: white;
-                padding: 10px;
-                border-radius: 0px 10px 10px 10px ;
-                min-width: max-content;
-                border-bottom-width: 2px;
-                border-left-width: 2px;
-                border-color: #0954B0;
-            }
-            .userPic{
-                position: absolute;
-                bottom: -20px;
-                left: 5px ;
-                z-index: 1;
-            
-
-
-            }
-        }
-        //if message comes from owner then I want it to display opposite
-        &.owner{
-            flex-direction: row-reverse;
-
-            .userPic{
-                position: absolute;
-                bottom: -20px;
-                right: 5px ;
-                z-index: 1;
-            }
-
-            .messageContent{
-                align-items: flex-end;
-                position: relative;
-                flex-grow: 1;
-                margin-left: 10px;
-
-
-            p{
-                border-radius: 10px 0px 10px 10px;
-                border: 1px solid black;
-                border-bottom-width: 2px;
-                border-right-width: 2px;
-                border-color: #0099FF;
-                max-width: max-content;
-            }
-
-            }
-        }
+//version three
+.message {
+    display: flex;
+    margin-bottom: 10px;
+    position: relative;
+  
+    &.owner {
+        flex-direction: row-reverse;
     }
+  
+    .messageInfo {
+      display: flex;
+      align-items: flex-end;
+      margin-right: 10px; /* Adjust margin as needed */
+      margin-left: 10px; /* Adjust margin as needed */
+    }
+  
+    .userPic {
+      width: 35px; /* Adjust width of the user picture */
+      height: 35px; /* Adjust height of the user picture */
+      overflow: hidden;
+      border-radius: 50%;
+      position: absolute;
+      bottom: -25px;
+  
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  
+    .messageContent {
+      max-width: 70%; /* Adjust max-width as needed */
+      padding: 10px;
+      background-color: white; /* Adjust background color as needed */
+      border-radius: 10px;
+      word-wrap: break-word; /* Allow long words to wrap */
+      border: 1px solid;
+      border-bottom: 3px solid;
+      border-left: 3px solid;
+      border-color: #0954B0 ;
+    }
+  
+    &.owner .userPic {
+        position: absolute;
+        bottom: -25px;
+        right: 5px ;
+        z-index: 1;
+    }
+  
+  
+    &.owner .messageContent {
+        background-color: white; /* Change background color for owner's messages */
+        color: black; /* Change text color for owner's messages */
+        border: 1px solid;
+        border-bottom: 3px solid;
+        border-right: 3px solid;
+        border-color: #0099FF;
+    }
+  }
+  
+
